@startuml

' --- CLASSES ---

class User {
  id : int
  username : str
  sifre : str
  email : str
  ad : str
  soyad : str
  role : Role
  login()
  logout()
}

class Yonetici {
  ogrenci_kaydi_excel(dosya: Any)
  akademisyen_kaydi_manuel()
  ders_olustur()
  ders_guncelle()
  ders_sil()
  kullanici_yonetimi()
}

class Ogrenci {
  ogr_no : str
  sinif : int
  gpa : decimal
  ders_kaydi_yap()
  ders_ve_not_goruntule()
  transkript_goruntule()
  transkript_indir_pdf()
}

class Akademisyen {
  unvan : Unvan
  verilen_dersleri_listele()
  ogrenci_listesi_goruntule()
  not_gir_guncelle()
  ders_kaydi_onayla()
}

class Bolum {
  ad : str
  bolum_kodu : str
}

class Ders {
  ders_kodu : str
  ad : str
  kredi : int
  min_sinif : int
}

class DonemDersi {
  yil : int
  donem : Donem
  kontenjan : int
  aktiflik_durumu : bool
}

class DersKaydi {
  vize_notu : int
  final_notu : int
  ortalama : decimal
  harf_notu : HarfNotu
  onay_durumu : bool
  ortalama_hesapla()
  harf_notu_atama()
}

class DersKayitDonemi {
    yil : int
    donem : Donem
    baslangic : datetime
    bitis : datetime
}


' --- RELATIONSHIPS ---

User <|-- Ogrenci
User <|-- Akademisyen
User <|-- Yonetici

Bolum "1" *-- "*" Ogrenci
Bolum "1" *-- "*" Akademisyen
Bolum "1" *-- "*" Ders

' Yeni Zincir: Ogrenci -> DersKaydi -> DonemDersi -> Akademisyen
Ogrenci "1" -- "*" DersKaydi
DersKaydi "*" -- "1" DonemDersi
DonemDersi "*" -- "1" Akademisyen : dersi verir

' DonemDersi ve Genel Ders Tanımı İlişkisi
DonemDersi "*" -- "1" Ders : referans alır

@enduml